--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 #^  container_name: keycloak
 #^  command: -Dkeycloak.profile.feature.upload_scripts=enabled
 #^  volumes:
-#^  - /data:/data
+#^  - /srv/shared/misc:/data
 #^  healthcheck:
 #^    test: ["CMD", "curl", "-f", "$KEYCLOAK_URI/auth/realms/master"]
 #^    interval: 30s
@@ -228,7 +228,7 @@ services:
   smtp-server:
     networks:
     - kong-edu-net
-    image: reachfive/fake-smtp-server
+    image: reachfive/fake-smtp-server:0.8.1
     container_name: smtp-server
     hostname: smtp-server
     healthcheck:
@@ -244,7 +244,7 @@ services:
   mockbin:
     networks:
     - kong-edu-net
-    image: "mashape/mockbin"
+    image: mashape/mockbin:latest
     container_name: mockbin
     hostname: mockbin
     healthcheck:
@@ -259,7 +259,7 @@ services:
   redis:
     networks:
     - kong-edu-net
-    image: "redis:alpine"
+    image: redis:alpine3.15
     container_name: redis
     hostname: redis
     healthcheck:
@@ -270,3 +270,56 @@ services:
     restart: on-failure
     ports:
     - "6379:6379/tcp"
+
+  prometheus:
+    networks:
+    - kong-edu-net
+    image: prom/prometheus:v2.34.0
+    container_name: prometheus
+    hostname: prometheus
+    command: --config.file=/etc/prometheus/prometheus.yml --log.level=debug
+    healthcheck:
+      test: ["CMD", "wget", "-S", "--spider", "http://prometheus:9090"]
+      interval: 10s
+      timeout: 15s
+      retries: 10  
+    ports:
+    - 9090:9090
+    volumes:
+    - /srv/shared/misc/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  statsd:
+    networks:
+    - kong-edu-net
+    image: kong/statsd-exporter-advanced:0.3.1
+    container_name: statsd
+    hostname: statsd
+    depends_on:
+    - prometheus
+    healthcheck:
+      test: ["CMD", "wget", "-S", "--spider", "http://statsd:9102"]
+      interval: 10s
+      timeout: 15s
+      retries: 10 
+    command: --statsd.mapping-config=/tmp/statsd.rules.yaml --statsd.listen-unixgram=''
+    ports:
+    - 9125:9125
+    - 9102:9102
+    volumes:
+    - /srv/shared/misc/statsd.rules.yaml:/tmp/statsd.rules.yaml
+
+  grafana:
+    networks:
+    - kong-edu-net
+    image: grafana/grafana:8.4.6
+    container_name: grafana
+    hostname: grafana
+    depends_on:
+    - prometheus
+    healthcheck:
+      test: ["CMD", "wget", "-S", "--spider", "http://grafana:3000"]
+      interval: 10s
+      timeout: 15s
+      retries: 10 
+    ports:
+    - 3000:3000
