--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -6,28 +6,28 @@ networks:
     driver: bridge
 
 services:
-#^keycloak:
-#^  networks:
-#^  - kong-edu-net
-#^  image: jboss/keycloak:16.1.1
-#^  container_name: keycloak
-#^  command: -Dkeycloak.profile.feature.upload_scripts=enabled
-#^  volumes:
-#^  - /srv/shared/misc:/data
-#^  healthcheck:
-#^    test: ["CMD", "curl", "-f", "$KEYCLOAK_URI/auth/realms/master"]
-#^    interval: 30s
-#^    timeout: 30s
-#^    retries: 3
-#^  restart: on-failure
-#^  ports:
-#^  - 8080:8080
-#^  environment:
-#^    DB_VENDOR: H2
-#^    KEYCLOAK_USER: admin
-#^    KEYCLOAK_PASSWORD: admin
-#^    KEYCLOAK_IMPORT: "/data/kong_realm_template.json"
-#^    PROXY_ADDRESS_FORWARDING: "true"
+  keycloak:
+    networks:
+    - kong-edu-net
+    image: jboss/keycloak:16.1.1
+    container_name: keycloak
+    command: -Dkeycloak.profile.feature.upload_scripts=enabled
+    volumes:
+    - /srv/shared/misc:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "$KEYCLOAK_URI/auth/realms/master"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    restart: on-failure
+    ports:
+    - 8080:8080
+    environment:
+      DB_VENDOR: H2
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      KEYCLOAK_IMPORT: "/data/kong_realm_template.json"
+      PROXY_ADDRESS_FORWARDING: "true"
 
   postgres:
     networks:
