Ypdated env vars

--- a/installation/docker-compose.yaml
+++ b/installation/docker-compose.yaml
@@ -146,11 +146,11 @@ services:
      #KONG_LICENSE_DATA: ${KONG_LICENSE_DATA}
      #KONG_ENFORCE_RBAC: "on"
      #KONG_ADMIN_API_URI: "https://api.kong.lan:8444"
-      KONG_ADMIN_API_URI: ${KONG_ADMIN_API_URI}
+      KONG_ADMIN_API_URI: ${KONG_ADMIN_API_URI:-http://localhost:8001}
       KONG_ADMIN_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_ADMIN_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
      #KONG_ADMIN_GUI_URL: "https://manager.kong.lan:8445"
-      KONG_ADMIN_GUI_URL: ${KONG_MANAGER_URI}
+      KONG_ADMIN_GUI_URL: ${KONG_ADMIN_GUI_URL:-http://localhost:8002}
       KONG_ADMIN_GUI_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_ADMIN_GUI_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
      #KONG_ADMIN_GUI_AUTH: "basic-auth"
@@ -158,11 +158,11 @@ services:
       KONG_PORTAL: "on"
       KONG_PORTAL_GUI_PROTOCOL: "https"
      #KONG_PORTAL_GUI_HOST: "portal.kong.lan:8446"
-      KONG_PORTAL_GUI_HOST: ${KONG_PORTAL_GUI_HOST}
+      KONG_PORTAL_GUI_HOST: ${KONG_PORTAL_GUI_HOST:-localhost:8003}
       KONG_PORTAL_GUI_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_PORTAL_GUI_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
      #KONG_PORTAL_API_URL: "https://portal-api.kong.lan:8447"
-      KONG_PORTAL_API_URL: ${KONG_PORTAL_API_URI}
+      KONG_PORTAL_API_URL: ${KONG_PORTAL_API_URL:-http://localhost:8004}
       KONG_PORTAL_API_SSL_CERT_KEY: "/srv/shared/ssl/wildcard.key"
       KONG_PORTAL_API_SSL_CERT: "/srv/shared/ssl/wildcard.pem"
       KONG_PORTAL_AUTH: "basic-auth"
